@@ -1,7 +1,7 @@
 ## Interface: 90001
 ## Title: [Lib] Scorpio
 ## Author: kurapica125@outlook.com
-## Version: v054
+## Version: v055
 ## Notes: Scorpio Addon FrameWork
 ## URL: http://github.com/kurapica/Scorpio
 ## Dependencies: PLoop
